# omniget-plugin-courses

./: .gitignore  Cargo.toml  README.md  plugin.json
.github/workflows/: release.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: index.js
frontend/src/components/hotmart/: CourseCard.svelte  ModuleList.svelte
frontend/src/courses/: +layout.svelte  +page.svelte  platform-icons.ts
frontend/src/courses/afyainternato/: +page.svelte
frontend/src/courses/alpaclass/: +page.svelte
frontend/src/courses/areademembros/: +page.svelte
frontend/src/courses/astronmembers/: +page.svelte
frontend/src/courses/cademi/: +page.svelte
frontend/src/courses/cakto/: +page.svelte
frontend/src/courses/caktomembers/: +page.svelte
frontend/src/courses/curseduca/: +page.svelte
frontend/src/courses/datascienceacademy/: +page.svelte
frontend/src/courses/eduzznutror/: +page.svelte
frontend/src/courses/entregadigital/: +page.svelte
frontend/src/courses/estrategia-concursos/: +page.svelte
frontend/src/courses/estrategia-ldi/: +page.svelte
frontend/src/courses/estrategia-militares/: +page.svelte
frontend/src/courses/fluencyacademy/: +page.svelte
frontend/src/courses/grancursos/: +page.svelte
frontend/src/courses/greatcourses/: +page.svelte
frontend/src/courses/greennclub/: +page.svelte
frontend/src/courses/gumroad/: +page.svelte
frontend/src/courses/hotmart/: +page.svelte
frontend/src/courses/kajabi/: +page.svelte
frontend/src/courses/kirvano/: +page.svelte
frontend/src/courses/kiwify/: +page.svelte
frontend/src/courses/masterclass/: +page.svelte
frontend/src/lib/: platforms.ts
i18n/: el.json  en.json  fr.json  it.json  ja.json  pt.json  zh.json
src/: emit_helper.rs  lib.rs  settings_helper.rs  settings_reader.rs  state.rs
src/commands/: afya.rs  alpaclass.rs  areademembros.rs  astronmembers.rs  auth.rs  cademi_cmd.rs  cakto.rs  caktomembers.rs  courses.rs  curseduca.rs  downloads.rs  dsa.rs  entregadigital.rs  estrategia_concursos.rs  estrategia_ldi.rs  estrategia_militares.rs  fluencyacademy.rs  grancursos.rs  greatcourses.rs  greenn.rs  gumroad.rs  kajabi.rs  kirvano.rs  kiwify.rs  masterclass.rs  medcel.rs  medcof.rs  medway.rs  memberkit_cmd.rs  mod.rs  nutror.rs  pluralsight.rs  rocketseat.rs  skool.rs  teachable.rs  themembers.rs  thinkific.rs  udemy_auth.rs  udemy_courses.rs  udemy_downloads.rs  (+1 more)
(+12 files in other folders)
