[package]
name = "omniget-plugin-courses"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "http2", "gzip", "brotli", "deflate", "rustls-tls", "socks"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", rev = "6f2392f", default-features = false, features = ["tokio-runtime"] }
scraper = "0.21"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10.0"
dirs = "6"
sanitize-filename = "0.6"
unicode-normalization = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
base64 = "0.22.1"
sha2 = "0.10"
filetime = "0.2.27"
tauri-plugin-store = "2"
omniget-core = { path = "../omniget-core", features = ["desktop"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
